fix menuoverflow with new flexbox

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -146,16 +146,29 @@ tr.active td{
   margin: 0;
 }
 
+.section-menu > div > p,
+.section-menu .md-label{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.section-menu .md-button.md-icon-button {
+    min-width: 48px;
+}
+
 .question-menu strong{
   font-weight: bold;
 }
 
 .question-menu em{
-  display: block;
   font-weight: normal;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.question-menu-description {
+    min-width: 0;
 }
 
 .question-stat{
